@@ -18,9 +18,11 @@ WriteMakefile
    'MAN3PODS' => {'Date.pm'   => '$(INST_MAN3DIR)/Tk::Date.$(MAN3EXT)',
 		 },
    'PREREQ_PM' => {'Tk'                => 402.002,
+		   # The following are optional
 		   'Tk::NumEntryPlain' => 0.02,
 		   'Tk::NumEntry'      => 1.08,
 		   'Tk::FireButton'    => 0.05,
+		   #'DateTime::Locale'  => 0, # very optional
 		  },
 );
 
